--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <span id="container-confetti"></span>
 
 
-  <header>
+  <header 
+  data-aos="fade-down"
+  data-aos-duration="800"
+  data-aos-easing="ease-in-out">
     <nav>
       <div class="logo">
         <img src="assets/logo.png" alt="logo do site">
@@ -35,18 +38,42 @@
     </nav>
   </header>
   <main>
-   <img src="assets/papai-noel.png" alt="papai noel">
+   <img src="assets/papai-noel.png" alt="papai noel"
+   data-aos="fade-right"
+   data-aos-duration="800"
+   data-aos-easing="ease-in-out"
+   >
    <section>
-    <h2>box Misteriosa do</h2>
-    <h1>papai noel</h1>
-    <p class="description">
+    <h2
+    data-aos="fade-up"
+    data-aos-duration="800"
+    data-aos-easing="ease-in-out"
+    data-aos-delay="300"
+    >box Misteriosa do</h2>
+    <h1
+    data-aos="fade-up"
+    data-aos-duration="800"
+    data-aos-easing="ease-in-out"
+    data-aos-delay="300"
+    >papai noel</h1>
+    <p 
+    data-aos="fade-up"
+    data-aos-duration="800"
+    data-aos-easing="ease-in-out"
+    data-aos-delay="500"
+    class="description">
       Viva a magia do Natal com a nossa <strong>Box Natalina</strong>,
       um presente diretamente da oficina do Polo Norte do Papai Noel, E adivinhe
       quem fará a entrega? Os correios? Nananinanão, será o própio bom velhinho
       que se encarrega da entraga. Garanta já a sua Box misteriosa e transfome este
       Natal em um evento verdadeiramente especial. 
     </p>
-    <div class="buy">
+    <div
+    data-aos="fade-up"
+    data-aos-duration="800"
+    data-aos-easing="ease-in-out"
+    data-aos-delay="900" 
+    class="buy">
       <p><sup>R$</sup>56.87</p>
       <div class="buy-spans">
         <span></span>
